# ap-faas-setting

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  schema.json
.github/: lint.yml
.github/workflows/: lint.yml  test.yml
generated_data/1681052145_lambda-exp-for-ocr-sentiment-analyzer/: config_used.json  test_10_concurrency.csv  test_15_concurrency.csv  test_20_concurrency.csv  test_25_concurrency.csv  test_5_concurrency.csv
generated_data/1681052488_lambda-exp-for-ocr-sentiment-analyzer/: config_used.json  test_10_concurrency.csv  test_15_concurrency.csv  test_20_concurrency.csv  test_25_concurrency.csv  test_5_concurrency.csv
generated_data/1681056240_lambda-exp-for-ocr-sentiment-analyzer/: config_used.json  test_10_concurrency.csv  test_15_concurrency.csv  test_20_concurrency.csv  test_25_concurrency.csv  test_5_concurrency.csv
generated_data/1681056562_lambda-exp-for-ocr-sentiment-analyzer/: config_used.json  test_10_concurrency.csv  test_15_concurrency.csv  test_20_concurrency.csv  test_25_concurrency.csv  test_5_concurrency.csv
generated_data/1681057432_lambda-exp-for-ocr-sentiment-analyzer/: test_5_concurrency.csv
generated_data/1681057852_lambda-exp-for-ocr-sentiment-analyzer/: test_10_concurrency.csv  test_15_concurrency.csv  test_5_concurrency.csv
generated_data/1681057990_lambda-exp-for-ocr-sentiment-analyzer/: config_used.json  test_10_concurrency.csv  test_15_concurrency.csv  test_20_concurrency.csv  (+2 more)
sample_configs/: city-weather.yaml  combine-functions.yaml  image-resizer.yaml  ocr-image.yaml
tests/: test_app.py
(+48 files in other folders)
